--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     "require": {
         "php": "^8.0.2",
         "cocur/slugify": "^4.2",
+        "darkaonline/l5-swagger": "^8.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "midtrans/midtrans-php": "^2.5",
-        "nextapps/laravel-swagger-ui": "^0.6.0",
         "propaganistas/laravel-phone": "^4.4",
         "ramsey/uuid": "^4.6",
         "tymon/jwt-auth": "^1.0",
