--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.2",
         "midtrans/midtrans-php": "^2.5",
         "nextapps/laravel-swagger-ui": "^0.6.0",
         "propaganistas/laravel-phone": "^4.4",
