--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "^4.2",
         "midtrans/midtrans-php": "^2.5",
         "nextapps/laravel-swagger-ui": "^0.6.0",
+        "phpmailer/phpmailer": "^6.8",
         "propaganistas/laravel-phone": "^4.4",
         "ramsey/uuid": "^4.6",
         "simplesoftwareio/simple-qrcode": "^1.0.3",
