--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "cocur/slugify": "^4.2",
         "doctrine/dbal": "^3.6",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
@@ -22,6 +23,7 @@
         "propaganistas/laravel-phone": "^4.4",
         "ramsey/uuid": "^4.6",
         "simplesoftwareio/simple-qrcode": "^1.0.3",
+        "spatie/image": "^2.2",
         "tymon/jwt-auth": "^1.0",
         "yaza/laravel-repository-service": "^3.2"
     },
